[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nav-stack-tooling"
version = "0.1.0"
description = "Tooling config for a ROS 2 Python workspace"
requires-python = ">=3.10"

[project.optional-dependencies]
tooling = [
    "ruff>=0.6.0",
    "mypy>=1.8",
]

[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    ".git",
    "build",
    "install",
    "log",
    "imu_publisher",  # git submodule
    "**/__pycache__",
    "**/*.egg-info",
    "**/.pytest_cache",
    "**/.mypy_cache",
    "**/resource",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff rules
    "A",   # builtins shadowing
    "C4",  # comprehension optimizations
    "PIE", # misc correctness
    "ISC"  # string concat issues
]
ignore = [
    "E501", # formatter handles line wrapping
]

[tool.ruff.lint.per-file-ignores]
"**/test/**.py" = [
    "B011", # asserts, tests use them
]

[tool.mypy]
python_version = "3.10"
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
check_untyped_defs = true
exclude = [
    "build/",
    "install/",
    "log/",
    "(^|/)setup\\.py$",
]
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = false
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "rclpy.*",
    "builtin_interfaces.*",
    "std_msgs.*",
    "geometry_msgs.*",
    "geographic_msgs.*",
    "nav_msgs.*",
    "sensor_msgs.*",
    "std_srvs.*",
    "visualization_msgs.*",

    "launch",
    "launch.*",
    "launch_ros",
    "launch_ros.*",

    "ament_copyright.*",
    "ament_flake8.*",
    "ament_pep257.*",

    "tf2_ros.*",
    "tf_transformations.*",
    "tf2_geometry_msgs",

    "robot_localization.*",
    "pyproj"
]
ignore_missing_imports = true
disable_error_code = ["attr-defined"]
