<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and shared configuration for the navigation stack</description>
  <maintainer email="hardyem@umich.edu">Ethan Hardy</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>localization</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>vectornav</exec_depend>
  <exec_depend>gps_publisher</exec_depend>
  <exec_depend>marvin_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>autonav_goal_selection</exec_depend>
  <exec_depend>path_planning</exec_depend>
  <exec_depend>occupancy_grid_transform</exec_depend>
  <exec_depend>path_tracking</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>state_machine</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>python3-typing-extensions</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
