<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>occupancy_grid_inflation</name>
  <version>0.1.0</version>
  <description>Inflation node for OccupancyGrid messages</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>map_interfaces</depend>
  <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->
  <!-- <depend>rosidl_default_generators</depend> -->
  <depend>nav_msgs</depend>
  <!-- <exec_depend>rosidl_default_runtime</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>